--- a/Bethco/src/index.css
+++ b/Bethco/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import "@mantine/core/styles.css";
+@import "@mantine/carousel/styles.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
